--- a/html/index.html
+++ b/html/index.html
@@ -14,126 +14,126 @@
     </head>   
         <body class="body">
             <header>
-                <a href="./homework.html">
+                <a class="link logo" href="./homework.html">
                    WebStudio  
                 </a>
                 <ul>
                     <li class="link">
-                        <a href="">студия</a>
+                        <a class="link" href="">студия</a>
                     </li>
-                    <li>
-                        <a href="">портфолио</a>
+                    <li class="link">
+                        <a class="link" href="">портфолио</a>
                     </li>
-                    <li>
-                        <a href="">контакти</a>
+                    <li class="link">
+                        <a class="link" href="">контакти</a>
                     </li>
                   </ul>
                 </nav>
-                 <address>
+                 <address class="address">
                      <ul>
-                        <li>
-                            <a href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="link">
+                            <a class="nomber-mail link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
-                        <li>
-                            <a href="mailto:isfo@devstudio.com">isfo@devstudio.com</a>
+                        <li class="link">
+                            <a class="nomber-tel link" href="mailto:isfo@devstudio.com">isfo@devstudio.com</a>
                         </li>
                     </ul>
                  </address>
             </header>
             <main>
                 <div>
-                    <button type="button">
+                    <button class="button" type="button">
                         все
                     </button>
-                    <button type="button">
+                    <button class="button" type="button">
                         Веб-сайты
                     </button>
-                    <button type="button">
+                    <button class="button" type="button">
                         Приложения
                     </button>
-                    <button type="button">
+                    <button class="button" type="button">
                         Дизайн
                     </button>
-                    <button type="button">
+                    <button class="button" type="button">
                         Маркетинг
                     </button>
                 </div>
                 <ul>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img.png" alt="ноутбук с изображением" width="370" height="294">
-                    <h4>
+                    <h4  class="about">
                         Технокряк
                     </h4>
                     <p>
                         Веб-сайт
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (1).png" alt="игра в баскетбол" width="370" height="294">
-                    <h4>
+                    <h4  class="about">
                         Постер New Orlean vs Golden Star
                     </h4>
                     <p>
                         Дизайн
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (2).png" alt="логотип ресторана" width="370" height="294">
-                    <h4>
+                    <h4 class="about">
                         Ресторан seafood
                     </h4>
                      <p>
                          Приложение
                      </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (3).png" alt="наушники" width="370" height="294">
-                    <h4>
+                    <h4 class="about">
                         Проект Prime
                     </h4>
                     <p>
                         Маркетинг
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (4).png" alt="две коробки" width="370" height="294">
-                    <h4>
+                    <h4  class="about">
                         Проект boxes
-                    </h4>
+                    </h4 >
                     <p>
                         Приложение
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (5).png" alt="монитор" width="370" height="294">
-                    <h4>
+                    <h4 class="about">
                         Inspiration has no Borders
                     </h4>
                     <p>
                         Веб-сайт
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (6).png" alt="книжки" width="370" height="294">
-                    <h4>
+                    <h4 class="about">
                         Издание Limited Edition
                     </h4>
                     <p>
                         Дизайн
                     </p>
                     </li>
-                    <li>
+                    <li class="link">
                     <img src="./programm/images/homework2/img (7).png" alt="логотип бренда" width="370" height="294">
-                    <h4>
+                    <h4  class="about">
                         Проект Lab
                     </h4>
                     <p>
                         Маркетинг
                     </p>
                     </li>
-                    <li> 
+                    <li class="link"> 
                     <img src="./programm/images/homework2/img (8).png" alt="работа за ноутбуком" width="370" height="294">
-                    <h4>
+                    <h4 class="about">
                         Growing Business
                     </h4>
                     <P>
@@ -145,18 +145,20 @@
             <footer>
                 <address>
                   <ul>
-                      <li>
-                        <a href="file:///D:/Games/github.io/index.html"> WebStudio
+                      <li class="link">
+                        <a class="link logo" href="file:///D:/Games/github.io/index.html"> WebStudio
                         </a>
                       </li>
-                      <li>
-                        <a href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                      <li class="link">
+                        <a class="link location" href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                             >г. Киев, пр-т Леси Украинки, 26
                         </a>
                       </li>
-                      <li><a href="tel:+380961111111">+38 096 111 11 11</a>
+                      <li class="link">
+                          <a class="link nomber-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                       </li>
-                      <li><a href="mailto:isfo@devstudio.com">isfo@devstudio.com</a>
+                      <li class="link">
+                          <a class="link nomber-mail" href="mailto:isfo@devstudio.com">isfo@devstudio.com</a>
                       </li>
                     </ul> 
                 </address>
